--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
         <!-- FOOTER -->
         <footer class="container-fluid">
-            <section class="">
+            <section>
                 <nav class="row menu-footer pt-4 col-md-12 align-items-center">
                     <div class="col-md-3 col-sm-12 movil-a">
                         <img src="/img/logo.png" alt="Logo Harman Kardom" class="logo-footer ">
