--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar navbar-expand-md fixed-top bg-dark">
               <div class="container-fluid menu-header">
                 <div class="col-md-3 col-sm-12">
-                    <img src="/img/logo.png" alt="Logo Harman Kardom" class="logo-header">
+                    <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/logo.png" alt="Logo Harman Kardom" class="logo-header">
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi bi-list"></i>
@@ -92,7 +92,7 @@
                 <div class="row row-cols-1 row-cols-md-3 g-4">                    
                     <div class="col-md-3">
                         <div class="card h-100 b-card">
-                            <img src="/img/p1.png" class="card-img-top" alt="...">
+                            <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p1.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title line-a">Onyx Studio 4</h5>
                                 <ul>
@@ -107,7 +107,7 @@
 
                     <div class="col-md-3">
                         <div class="card h-100 b-card">
-                            <img src="/img/p2.png" class="card-img-top" alt="...">
+                            <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p2.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title line-a">Citation One</h5>
                                 <ul>
@@ -122,7 +122,7 @@
 
                     <div class="col-md-3">
                         <div class="card h-100 b-card">
-                            <img src="/img/p3.png" class="card-img-top" alt="...">
+                            <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title line-a">Fly ANC</h5>
                                 <ul>
@@ -138,7 +138,7 @@
 
                     <div class="col-md-3">
                         <div class="card h-100 b-card">
-                            <img src="/img/p4.png" class="card-img-top" alt="...">
+                            <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p4.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title line-a">Aura Studio 3</h5>
                                 <ul>
@@ -157,7 +157,7 @@
             <section class="container-fluid mt-4 b-blue-black" id="inalambrico">
                 <article class="row align-items-center">
                     <div class="col-md-6 g-0">
-                        <img src="/img/AuraStudio3_LifestyleImage_904x560.jpg" alt="..." class="img-fluid">
+                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/AuraStudio3_LifestyleImage_904x560.jpg" alt="..." class="img-fluid">
                     </div>
                     <div class="col-md-6 p-5 g-0">
                         <h2 class="display-6 fw-light line-b t-title">Un sonido hermoso Tiene que ser inalámbrico</h2>            
@@ -178,7 +178,7 @@
                             <div class="border radio-4 p-4">
                                 <div class="row p-0 m-0">
                                     <div class="col-md-4 p-0 m-0">
-                                        <img src="/img/p8.png" class="img-fluid rounded" alt="...">
+                                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p8.png" class="img-fluid rounded" alt="...">
                                     </div>
                                     <div class="col-md-8 text-start">
                                         <h5>SB26</h5>
@@ -194,7 +194,7 @@
                             <div class="border radio-4 p-4">
                                 <div class="row p-0 m-0">
                                     <div class="col-md-4 p-0 m-0">
-                                        <img src="/img/p5.png" class="img-fluid rounded" alt="...">
+                                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p5.png" class="img-fluid rounded" alt="...">
                                     </div>
                                     <div class="col-md-8 text-start">
                                         <h5>Omni 20</h5>
@@ -209,7 +209,7 @@
                             <div class="border radio-4 p-4">
                                 <div class="row p-0 m-0">
                                     <div class="col-md-4 p-0 m-0">
-                                        <img src="/img/p4.png" class="img-fluid rounded" alt="...">
+                                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p4.png" class="img-fluid rounded" alt="...">
                                     </div>
                                     <div class="col-md-8 text-start">
                                         <h5>FLY ANC</h5>
@@ -224,7 +224,7 @@
                             <div class="border radio-4 p-4">
                                 <div class="row p-0 m-0">
                                     <div class="col-md-4 p-0 m-0">
-                                        <img src="/img/p9.png" class="img-fluid rounded" alt="...">
+                                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/p9.png" class="img-fluid rounded" alt="...">
                                     </div>
                                     <div class="col-md-8 text-start">
                                         <h5>HARMAN KARDON MARINO</h5>
@@ -248,7 +248,7 @@
                         <button type="button" class="btn btn-primary fw-bold boton-1 mt-4">MAS INFO</button>
                     </div>
                     <div class="col-md-6 g-0">
-                        <img src="/img/hiunday.jpg" alt="..." class="img-fluid">
+                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/hiunday.jpg" alt="..." class="img-fluid">
                     </div>
                 </article>
             </section>                
@@ -260,7 +260,7 @@
             <section>
                 <nav class="row menu-footer pt-4 col-md-12 align-items-center">
                     <div class="col-md-3 col-sm-12 movil-a">
-                        <img src="/img/logo.png" alt="Logo Harman Kardom" class="logo-footer ">
+                        <img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/logo.png" alt="Logo Harman Kardom" class="logo-footer ">
                     </div>
                     <div class="col-md-6 text-end movil-a">
                         <ul>
