--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="/css/own.css">
+        <link rel="stylesheet" href="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/css/own.css">
 
         <!-- JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -273,8 +273,8 @@
                     </div>
                     <div class="col-md-3 text-end g-0 movil-a">
                         <p class="t-text">signenos en 
-                            <span class="px-2"><img src="/img/facebook.png" alt="Logo Facebook" class="logo-rrss "></span>
-                            <span><img src="/img/instagram.png" alt="Logo Instagram" class="logo-rrss"></span>
+                            <span class="px-2"><img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/facebook.png" alt="Logo Facebook" class="logo-rrss "></span>
+                            <span><img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/instagram.png" alt="Logo Instagram" class="logo-rrss"></span>
                         </p>
                     </div>
                 </nav>
