actualizacion de los id para el scroll

--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
                         <ul>
                             <li><a href="#inicio" target="_self">Inicio</a></li>
                             <li><a href="#catalogo" target="_self">Catálogo</a></li>
-                            <li><a href="#Inalambrico" target="_self">Inalámbrico</a></li>
-                            <li><a href="#Sistemas" target="_self">Sistemas</a></li>
-                            <li><a href="#Automotor" target="_self">Automotor</a></li>
+                            <li><a href="#inalambrico" target="_self">Inalámbrico</a></li>
+                            <li><a href="#sistemas" target="_self">Sistemas</a></li>
+                            <li><a href="#automotor" target="_self">Automotor</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 text-end g-0 movil-a">
