actualizacion de un titulo

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <!-- SISTEMAS -->
             <section class="container-fluid mt-5" id="sistemas">
                 <div class="container text-center">
-                    <h2 class="display-6 fw-light pb-4 ">Un sonido hermoso Tiene que ser inalámbrico</h2>
+                    <h2 class="display-6 fw-light pb-4 ">Nuestros sistemas de sonido son creados para tus espacios</h2>
                     <div class="row mb-5">
 
                         <article class="col-md-6 col-sm-12 pb-4">
