actualizacion de texto footer

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </ul>
                     </div>
                     <div class="col-md-3 text-end g-0 movil-a">
-                        <p class="t-text">signenos en 
+                        <p class="t-text">siguenos en 
                             <span class="px-2"><img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/facebook.png" alt="Logo Facebook" class="logo-rrss "></span>
                             <span><img src="https://alexanderosses.github.io/LANDING-DE-NEGOCIO/img/instagram.png" alt="Logo Instagram" class="logo-rrss"></span>
                         </p>
