actualizacion de la frase del jumbo tron

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <h1 class="fw-bold t-title line-b">Escucha música diferente en cada habitación</h1>
                             </div>
                             <span class="t-text pt-2">
-                                La solución perfecta para cada lugar de tu hogar 
+                                Nuestros equipos de sonido son la solución perfecta para cada lugar de tu hogar.
                             </span>  
                             <form class="row g-3">
                                 <div class="col-md-12 col-sm-12">
